--- a/04_livrable/website/punr/punr_ch01.html
+++ b/04_livrable/website/punr/punr_ch01.html
@@ -57,13 +57,10 @@
          <article>
             <details>
                <summary>Introduction</summary>
-               <p>Premier texte du recueil, cet article est identifiée par GaliaXXX comme une réécriture
-                  augmentée des articles «&nbsp;Il écrit comme Stendhal&nbsp;» publié en 1955 dans L'ExpressNBP
-                  et «&nbsp;La littérature, aujourd'hui - VI&nbsp;» publié dans le numéro 14 de Tel Quel en 1963NBP.
-                  Outre sa fonction de seuil et d'introduction aux écrits théoriques qui suivent ce
-                  texte place les jalons de la rhétorique de Robbe-Grillet.</p>
-               <p>Se plaignant de la récéption de ses œuvres puis des articles publiés dans L'Express
-                  qui sont depuis devenus le présent recueil, Robbe-Grillet se positionne comme tenant
+               <p>Premier texte du recueil, cet article est identifiée par Galia <span class="STDsc">Yanoshevsky</span> comme une réécriture augmentée des articles «&nbsp;Il écrit comme Stendhal&nbsp;» publié le
+                  25&nbsp;octobre&nbsp;1955 dans <span class="STDitalic">L'Express</span> et «&nbsp;La littérature, aujourd'hui - VI&nbsp;» publié dans le numéro 14 de <span span="STDitalic">Tel Quel</span> en 1963. Outre sa fonction de seuil et d'introduction aux écrits théoriques qui suivent
+                  ce texte place les jalons de la rhétorique de Robbe-Grillet.</p>
+               <p>Se plaignant de la récéption de ses œuvres puis des articles publiés dans <span class="STDitalic">L'Express</span> qui sont depuis devenus le présent recueil, Robbe-Grillet se positionne comme tenant
                   du bon sens&nbsp;: il n'est pas un théoricien par vocation mais par réaction. Il ne s'agit
                   pas tant de produire une nouvelle théorie que d'«&nbsp;éclair[er] davantage les éléments
                   qui avaient été les plus négligés par les critiques, ou les plus distordus&nbsp;», combattre
@@ -77,11 +74,10 @@
                   et une véritable définition du rôle de la littérature complétée au fil du recueil.</p>
                <p>Notons enfin une technique usuelle chez Robbe-Grillet consistant à vider l'argumentation
                   en limitant autant que possible la portée de ces écrits théoriques, si l'on aurait
-                  tord de considérer que Robbe-Grillet s'autorise ici à «&nbsp;se contredire&nbsp;», il est assez
-                  juste de constater qu'il prend soin de se dégager un espace entre sa pratique littéraire
+                  tord de considérer que Robbe-Grillet s'autorise ici à se contredire, il est juste
+                  de constater qu'il prend soin de se dégager un espace entre sa pratique littéraire
                   et sa pratique théorique dans lequel le lecteur devrait l'autoriser à rafiner sa pensée,
-                  la préciser et sans doute sans rien renier du cheminement lui-même, en retrancher
-                  quelques passages.</p>
+                  la préciser et sans rien renier du cheminement lui-même, en retrancher quelques passages.</p>
             </details>
             <div class="smallgap"></div>
             <h3 id="d1e287"><span id="page_6" class="STDgray STDsmall pb">[6]</span>À quoi servent les théories<br><span class="STDsmall">(1955&nbsp;et&nbsp;1963)</span></h3>
@@ -196,9 +192,9 @@
                de sa création, et en insistant sur l’intérêt que présente pour lui la <span id="page_13" class="STDgray STDsmall pb">[13]</span>conscience de sa propre recherche, nous savons que c’est surtout au niveau de l’écriture
                que cette recherche s’opère, et que tout n’est pas clair à l’instant de la décision.
                Ainsi, après avoir indisposé les critiques en parlant de la littérature dont il rêve,
-               le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: «&nbsp;Expliquez-nous donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que
-               vous vouliez faire, dans quelle intention vous avez employé ce mot, construit cette
-               phrase de telle manière&nbsp;?&nbsp;»</p>
+               le romancier se sent soudain démuni lorsque ces mêmes critiques lui demandent&nbsp;: «&nbsp;Expliquez-nous
+               donc pourquoi vous avez écrit ce livre, ce qu’il signifie, ce que vous vouliez faire,
+               dans quelle intention vous avez employé ce mot, construit cette phrase de telle manière&nbsp;?&nbsp;»</p>
             <p>Devant de pareilles questions, on dirait que son «&nbsp;intelligence&nbsp;» ne lui est plus d’aucun secours. Ce qu’il a voulu faire, c’est seulement ce livre
                lui-même. Cela ne veut pas dire qu’il en soit satisfait toujours&nbsp;; mais l’œuvre demeure,
                dans tous les cas, la meilleure et la seule expression possible de son projet. S’il
