--- a/04_livrable/website/punr/punr_ch02.html
+++ b/04_livrable/website/punr/punr_ch02.html
@@ -57,11 +57,10 @@
          <article>
             <details>
                <summary>Introduction</summary>
-               <p>Initialement publié en 1956 dans le numéros 43 de la Nouvelle Revue Française et enrichi
-                  des articles «&nbsp;Réalisme et révolution&nbsp;» et «&nbsp;Pour un réalisme de la présence&nbsp;» publié
-                  dans L'Express en janvier 1955 et en janvier 1956 respectivement, cet article constitue
-                  sans doute l'une des charges les plus violentes adressés aux contemporains de Robbe-Grillet
-                  au sein du recueil.</p>
+               <p>Initialement publié en 1956 dans le numéros 43 de la<span class="STDitalic"> Nouvelle Revue Française</span> et enrichi des articles «&nbsp;Réalisme et révolution&nbsp;» et «&nbsp;Pour un réalisme de la présence&nbsp;»
+                  publié dans <span class="STDitalic">L'Express</span> en janvier 1955 et en janvier 1956 respectivement, cet article constitue sans doute
+                  l'une des charges les plus violentes adressés aux contemporains de Robbe-Grillet au
+                  sein du recueil.</p>
                <p>Plus encore c'est sans doute dans ce texte que l'on mesure l'habileté (ou la mauvaise
                   foi) de Robbe-Grillet en sa capacité à se mettre à la place de ses adversaires, qui
                   dès lors ne peuvent que sembler des adversaires supposés, imaginaires, les personnages
@@ -70,30 +69,29 @@
                   d'anormal, que leurs préoccupations d'écrivains datent de plusieurs siècles&nbsp;», compréhensif
                   «&nbsp;Comment feraient-elles [les choses] pour changer ? Vers quoi iraient-elles ?&nbsp;» enfin
                   pédagogue «&nbsp;Or le monde n'est ni signifiant ni absurde. Il est, tout simplement.&nbsp;».</p>
-               <p>Cette variété de ton, si elle sert la démonstration, doit aussi être perçue comme
-                  les traces de l'assemblage qui produisit l'article en cette forme. [justifier voir
-                  GALIA]</p>
-               <p>Au demeurant, le glissement à un ton plus théorique que polémique sert ici aussi l'économie
+               <p>Au service de la démonstration cette variété de ton est la reprise d'éléments argumentatifs
+                  déjà développés semblent des traces de l'assemblage des différents articles de presses.</p>
+               <p>Au demeurant, le glissement à un ton plus théorique que polémique sert aussi l'économie
                   globale du recueil. Par son titre et son sujet apparent : l'avenir du roman, cet article
                   semble programmatique. Loin de délivrer des propos abstraits sur l'avenir du roman,
                   ce texte s'avère être un état des lieux de la littérature contemporaine, tenant deux
                   pants de la littérature contemporaine, les héritiers de Balzac, du côté des consommateurs,
                   de ceux qui croit au «&nbsp;cœur&nbsp;» humain éternel et de la littérature telle qu'elle est,
                   en opposition à la littérature telle qu'elle pourrait être, les littérature acceptant
-                  le risque de jouïr pleineemnt de leur liberté d'écrivain pour écrire une littérature
+                  le risque de jouïr pleinement de leur liberté d'écrivain pour écrire une littérature
                   plus proche de la réalité.</p>
                <p>Est introduit dans ce chapitre surtout un hiatus entre l'importance de ces deux littératures
-                  et leur degré de contemporanéité. Alors que la littérature dominnante repose sur des
-                  idées au mieux de plusieurs siècle, au pire proprement délirante (coeur romantique
-                  des choses)&nbsp;; une littérature consciente du temps présent et de sa responsabilité
-                  à résister contre l'appropriation systématique&nbsp;» a toute les difficultés à exister.</p>
+                  et leur degré de contemporanéité. Alors que la littérature dominnante repose au mieux
+                  sur des idées de plusieurs siècle, au pire proprement délirante (le «&nbsp;coeur romantique
+                  des choses&nbsp;»)&nbsp;; une littérature consciente du temps présent et de sa responsabilité
+                  à résister contre «&nbsp;[l']appropriation systématique&nbsp;» a toute les difficultés à exister.</p>
                <p>Si ce texte semble dérouler toutes les raisons psychologiques (chez les lecteurs,
                   les auteurs, les critiques) etc. qui empêche à cette littérature nouvelle de prendre
-                  la place qui lui est dûe, c'est bien un paradoxe qu'expose en creux Robbe-Grillet
-                  invitant le lecteur à se positionner pour ce langage littérautre qui «&nbsp;déjà change&nbsp;».</p>
+                  la place qui lui est dûe, c'est bien un paradoxe qu'expose Robbe-Grillet invitant
+                  le lecteur à se positionner pour ce langage littérautre qui «&nbsp;déjà change&nbsp;».</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e508"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
+            <h3 id="d1e506"><span id="page_16" class="STDgray STDsmall pb">[16]</span>Une voie pour le roman futur<br><span class="STDsmall">(1956)</span></h3>
             <p class="first">Il ne semble guère raisonnable, à première vue, de penser qu’une littérature entièrement
                <span class="STDitalic">nouvelle</span> soit un jour&nbsp;–&nbsp;maintenant, par exemple&nbsp;–&nbsp;possible. Les nombreuses tentatives, qui
                se sont succédé depuis plus de trente ans, pour faire sortir le récit de ses ornières
