--- a/04_livrable/website/punr/punr_ch03.html
+++ b/04_livrable/website/punr/punr_ch03.html
@@ -55,40 +55,37 @@
          <div class="articlenavs">
             <h5>Au sein de cet article</h5><button class="darkbutton" onclick="displayPb();">Afficher les pages</button><h6>Sous-sections</h6>
             <ul id="articlenav">
-               <li><a href="#d1e732">Sur quelques notions périmées</a></li>
+               <li><a href="#d1e730">Sur quelques notions périmées</a></li>
                <ol>
-                  <li><a href="#d1e828">Le personnage</a></li>
-                  <li><a href="#d1e911">L’histoire</a></li>
-                  <li><a href="#d1e1030">L’engagement</a></li>
-                  <li><a href="#d1e1191">La forme et le contenu</a></li>
+                  <li><a href="#d1e826">Le personnage</a></li>
+                  <li><a href="#d1e909">L’histoire</a></li>
+                  <li><a href="#d1e1028">L’engagement</a></li>
+                  <li><a href="#d1e1190">La forme et le contenu</a></li>
                </ol>
             </ul>
          </div>
          <article>
             <details>
                <summary>Introduction</summary>
-               <p>Issu de cinq publications entre octobre et novembre 1957 dans le magazine France Observateur
-                  («&nbsp;Écrire pour son temps&nbsp;»,«&nbsp;Il n'y a pas "d'avant-garde"&nbsp;»,«&nbsp;La mort du personnage&nbsp;»,«&nbsp;Un
-                  joli talent de conteur&nbsp;»,«&nbsp;La forme et le contenu&nbsp;») et deux publications dans L'Express
-                  en décembre 1955 et février 1956 «&nbsp;Littérature engagée, littérature réactionnaire&nbsp;»,«&nbsp;Le
+               <p>Issu de cinq publications entre octobre et novembre 1957 dans le magazine <span class="STDitalic">France Observateur</span> («&nbsp;Écrire pour son temps&nbsp;»,«&nbsp;Il n'y a pas "d'avant-garde"&nbsp;»,«&nbsp;La mort du personnage&nbsp;»,«&nbsp;Un
+                  joli talent de conteur&nbsp;»,«&nbsp;La forme et le contenu&nbsp;») et deux publications dans <span class="STDitalic">L'Express</span> en décembre 1955 et février 1956 «&nbsp;Littérature engagée, littérature réactionnaire&nbsp;»,«&nbsp;Le
                   réalisme socialiste est bourgeois&nbsp;», cet article plus qu'une charge envers la littérature
                   de son temps s'attaque à la conception même que l'on se fait de la littérature s'en
                   prenant aux termes employés pour en parler.</p>
                <p>Commençant par développer le sens de ces termes tels que la critique les emploie,
-                  Robbe-Grillet s'emploie à en démontrer l'inanité en s'appuyant sur des exemples qui
+                  Robbe-Grillet s'ingénie à en démontrer l'inanité en s'appuyant sur des exemples qui
                   constitue en creux une filiation dont le dernier né n'est autre que le Nouveau&nbsp;Roman.</p>
                <p>Si le texte s'emploie à démontrer que ces concepts sont «&nbsp;périmés&nbsp;», ce n'est pas
                   seulement du fait d'un besoin de variété dans la production littéraire mais bien que
-                  les temps ont changé&nbsp;: certaines certitudes se sont évanouies, outre les notions des
-                  critiques académiques, c'est peut-être une certaine attitude face au monde teinté
-                  de métaphysique, de romantisme ou de positivisme, qui est ici rejetté. Plus qu'une
-                  vision nouvelle de ce que sont l'art et les œuvres, «&nbsp;De quelques notions périmées&nbsp;»
-                  nous dit&nbsp;: la modernité c'est de ne plus croire. Cette non-croyance, ou plutôt ce
-                  soupçon, se pose non seulement sur les théories mais également sur leurs vecteurs
-                  : la forme.</p>
+                  les temps ont changé. Certaines certitudes se sont évanouies, outre les notions des
+                  critiques académiques, c'est peut-être une attitude face au monde teintée de métaphysique,
+                  de romantisme ou de positivisme, qui est ici rejettée. Plus qu'une vision nouvelle
+                  de ce que sont l'art et les œuvres, «&nbsp;De quelques notions périmées&nbsp;» nous dit&nbsp;: la
+                  modernité c'est de ne plus croire. Cette non-croyance, ou plutôt ce soupçon, se pose
+                  non seulement sur les théories mais également sur leurs vecteurs : la forme.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e732"><span id="page_28" class="STDgray STDsmall pb">[28]</span>Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
+            <h3 id="d1e730"><span id="page_28" class="STDgray STDsmall pb">[28]</span>Sur quelques notions périmées<br><span class="STDsmall">(1957)</span></h3>
             <p class="first"><span class="ref">La critique traditionnelle<span class="refinfo">entite_collective, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span> a son vocabulaire. Bien qu’elle se défende beaucoup de porter sur la littérature
                des jugements systématiques (prétendant, au contraire, aimer librement telle ou telle
                œuvre d’après des critères «&nbsp;naturels&nbsp;»&nbsp;: le bon sens, le cœur, etc.), il suffit de lire avec un peu d’attention ses analyses
@@ -114,7 +111,7 @@
                <span class="ref">nos bons critiques<span class="refinfo">entite_collective, <span class="Ref3">emprunt non déclaré fortement suggéré</span>, <span class="Axi0">blâme</span>.</span></span> ont, chaque fois, prononcé quelques-uns de leurs mots magiques&nbsp;: «&nbsp;avant-garde&nbsp;», <span id="page_30" class="STDgray STDsmall pb">[30]</span>«&nbsp;laboratoire&nbsp;», «&nbsp;anti-roman&nbsp;»... c’est-à-dire&nbsp;: <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;fermons les yeux et revenons aux saines valeurs de la tradition française&nbsp;»</span>.</p>
             <div class="smallgap"></div>
             <div id="tit8" type="subsection">
-               <h4 id="d1e828">Le personnage</h4>
+               <h4 id="d1e826">Le personnage</h4>
                <div class="smallgap"></div>
                <p>Nous en a-t-on assez parlé, du «&nbsp;personnage&nbsp;»&nbsp;! Et ça ne semble, hélas, pas près de finir. Cinquante années de maladie, le constat
                   de son décès enregistré à maintes reprises par les plus sérieux essayistes, rien n’a
@@ -165,7 +162,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit9" type="subsection">
-               <h4 id="d1e911">L’histoire</h4>
+               <h4 id="d1e909">L’histoire</h4>
                <div class="smallgap"></div>
                <p>Un roman, pour la plupart des amateurs&nbsp;–&nbsp;et des critiques&nbsp;–, c’est avant tout une
                   «&nbsp;histoire&nbsp;». Un vrai romancier, c’est celui qui sait «&nbsp;raconter une histoire&nbsp;». Le bonheur de conter, qui le porte d’un bout à l’autre de son ouvrage, s’identifie
@@ -259,12 +256,12 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit10" type="subsection">
-               <h4 id="d1e1030">L’engagement</h4>
+               <h4 id="d1e1028">L’engagement</h4>
                <div class="smallgap"></div>
                <p>Puisque raconter pour distraire est futile et que raconter pour faire croire est devenu
                   suspect, le romancier pense apercevoir une autre voie&nbsp;: raconter pour enseigner. Las
-                  de s’entendre déclarer avec condescendance par les gens assis&nbsp;: <span class="quote" onclick="displayExtract('toDefine','0','3',1);">«&nbsp;Je ne lis plus de romans, j’ai passé l’âge, c’est bon pour les femmes (qui n’ont
-                     rien à faire), je préfère la réalité...&nbsp;»</span> et autres niaiseries, <span class="ref">le romancier<span class="refinfo">auteur, <span class="Ref4">emprunt ou mention non déclaré(e) non suggéré(e) reconstitué(e)</span>, <span class="Axi0">blâme</span>.</span></span> va se rabattre sur la littérature didactique. Là au moins il espère retrouver l’avantage&nbsp;:
+                  de s’entendre déclarer avec condescendance par les gens assis&nbsp;: «&nbsp;Je ne lis plus de romans, j’ai passé l’âge, c’est bon pour les femmes (qui n’ont
+                  rien à faire), je préfère la réalité...&nbsp;» et autres niaiseries, <span class="ref">le romancier<span class="refinfo">auteur, <span class="Ref4">emprunt ou mention non déclaré(e) non suggéré(e) reconstitué(e)</span>, <span class="Axi0">blâme</span>.</span></span> va se rabattre sur la littérature didactique. Là au moins il espère retrouver l’avantage&nbsp;:
                   la réalité est trop déroutante, trop ambiguë, pour que chacun puisse en tirer un enseignement.
                   Lorsqu’il s’agit de prouver quelque chose (que ce soit montrer <span class="ref">la misère de l’homme sans Dieu<span class="refinfo">œuvre, <span class="Ref4">emprunt ou mention non déclaré(e) non suggéré(e) reconstitué(e)</span>, <span class="Axi0">blâme</span>.</span></span>, expliquer le cœur féminin, ou faire <span class="ref">naître des consciences de classe<span class="refinfo">œuvre, <span class="Ref4">emprunt ou mention non déclaré(e) non suggéré(e) reconstitué(e)</span>, <span class="Axi0">blâme</span>.</span></span>), l’histoire inventée doit reprendre ses droits&nbsp;: elle sera tellement plus convaincante&nbsp;!</p>
                <p>Malheureusement, elle ne convainc plus personne&nbsp;; du moment que le romanesque est
@@ -402,7 +399,7 @@
                <div class="smallgap"></div>
             </div>
             <div id="tit11" type="subsection">
-               <h4 id="d1e1191">La forme et le contenu</h4>
+               <h4 id="d1e1190">La forme et le contenu</h4>
                <div class="smallgap"></div>
                <p>Une chose devrait troubler les partisans du <span class="ref">réalisme socialiste<span class="refinfo">courant, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, c’est la parfaite ressemblance de leurs arguments, de leur vocabulaire, de leurs
                   valeurs, avec ceux des critiques bourgeois les plus endurcis. Par exemple lorsqu’il
@@ -457,7 +454,7 @@
                   première personne du passé composé (dont l’emploi très inhabituel s’étend sur l’ensemble
                   du récit) par l’ordinaire troisième personne du passé simple pour que l’univers de
                   <span class="ref">Camus<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> disparaisse aussitôt, et tout l’intérêt de son livre&nbsp;; comme il suffit de changer
-                  l’ordonnance des mots, dans <span class="STDitalic"><span class="ref">Madame Bovary<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>,</span> pour qu’il ne reste plus rien de <span class="ref">Flaubert<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span>.</p>
+                  l’ordonnance des mots, dans <span class="STDitalic"><span class="ref">Madame Bovary<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>,</span> pour qu’il ne reste plus rien de <span class="ref">Flaubert<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span>.</p>
                <p>D’où la gêne que nous éprouvons devant les romans «&nbsp;engagés&nbsp;» qui se prétendent révolutionnaires parce qu’ils mettent en scène la condition ouvrière
                   et les problèmes du socialisme. Leur forme littéraire, qui date le plus souvent d’avant&nbsp;1848,
                   en fait les plus attardés des romans bourgeois&nbsp;: leur signification réelle, parfaitement
