--- a/04_livrable/website/punr/punr_ch04.html
+++ b/04_livrable/website/punr/punr_ch04.html
@@ -57,29 +57,27 @@
          <article>
             <details>
                <summary>Introduction</summary>
-               <p>Initialement publié en octobre 1958 dans le numéro 70 de la Nouvelle Revue Française,
-                  ce passage nous paraît être le plus existentialiste de Pour un nouveau roman. Si existentialiste
-                  que la philosophie de Sartre, l'absurde de Camus semble des fétiches, du moins des
-                  œuvres qui ne prennent pas acte de ce qu'elles énoncent.</p>
-               <p>À lire ces pages, il semblque l'existentialisme prenant acte d'un monde dépourvu de
-                  sens n'a pas su se défaire de la métaphysique. Entraînant un hiatus irrémédiable entre
-                  l'homme et le monde, dû à son incapacité à se défaire d'outils qu'il sait défectueux.
-                  Ce hiatus, Robbe-Grillet à la suite de Barthes propose de l'appeler la «&nbsp;Tragédie&nbsp;».</p>
+               <p>Initialement publié en octobre&nbsp;1958 dans le numéro&nbsp;70 de la <span class="STDitalic">Nouvelle Revue Française</span>, ce passage nous paraît être le plus existentialiste de <span class="STDitalic">Pour un nouveau roman</span>. Si existentialiste que la philosophie de Sartre et l'absurde de Camus semblent des
+                  fétiches, du moins des œuvres qui ne prennent pas acte de ce qu'elles énoncent.</p>
+               <p>À lire ces pages, il semble que l'existentialisme prenant acte d'un monde dépourvu
+                  de sens n'a pas su se défaire de la métaphysique, entraînant un hiatus irrémédiable
+                  entre l'homme et le monde, dû à son incapacité à se défaire d'outils qu'il sait défectueux.
+                  Ce hiatus, Robbe-Grillet à la suite de Barthes propose de l'appeler «&nbsp;la Tragédie&nbsp;».</p>
                <p>Lorsque l'on cessera de chercher l'homme partout on pourra peut-être s'intéresser
                   aux phénomènes, nous dit en substance Robbe-Grillet s'attelant à donner au lecteur
-                  les clefs de la littérature qu'il est en train de produire, presque un manuel du moins
-                  des recommandations techniques pour une forme débarassée de la tragédie, aux yeux
-                  de Robbe-Grillet, sans doute elle aussi périmée.</p>
+                  les clefs de la littérature qu'il est en train de produire, nous sommes presque devant
+                  un manuel, du moins des recommandations techniques pour une forme débarassée de la
+                  tragédie, aux yeux de Robbe-Grillet, elle aussi périmée.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e1338"><span id="page_54" class="STDgray STDsmall pb">[54]</span>Nature, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
+            <h3 id="d1e1337"><span id="page_54" class="STDgray STDsmall pb">[54]</span>Nature, humanisme, tragédie<br><span class="STDsmall">(1958)</span></h3>
             <div class="epigraph" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">
                <p>La tragédie n’est qu’un moyen de recueillir le malheur humain, de le subsumer, donc
                   de le justifier sous la forme d’une nécessité, d’une sagesse ou d’une purification&nbsp;:
                   refuser cette récupération et rechercher les moyens techniques de ne pas y succomber
                   traîtreusement (rien n’est plus insidieux que la tragédie) est aujourd’hui une entreprise
                   nécessaire.</p>
-               <p class="epigraph_ref"><span class="ref">Roland Barthes.<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span></p>
+               <p class="epigraph_ref"><span class="ref">Roland Barthes.<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span></p>
             </div>
             <p class="first">Il y a deux ans déjà, essayant de définir la direction d’une recherche romanesque
                encore hésitante, j’admettais comme un point acquis <span class="quote" onclick="displayExtract('toDefine','2','0',1);">«&nbsp;la destitution des vieux mythes de la profondeur&nbsp;»</span>. Les réactions très vives de la critique presque unanime, les objections de nombreux
@@ -364,7 +362,7 @@
             <p>L’absurde est donc bien une forme d’humanisme tragique. Ce n’est pas un constat de
                séparation entre l’homme et les choses. C’est une querelle d’amour, qui mène au crime
                passionnel. Le monde est accusé de complicité d’assassinat.</p>
-            <p>Quand <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> écrit (dans <span class="STDitalic"><span class="ref">Situations I<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span>) que <span class="STDitalic"><span class="ref">L’Étranger<span class="refinfo">œuvre, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span></span><span class="quote" onclick="displayExtract('toDefine','0','0',1);">«&nbsp;refuse l’anthropomorphisme&nbsp;»</span>, il nous donne, comme le montrent les citations précédentes, une vue incomplète de
+            <p>Quand <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> écrit (dans <span class="STDitalic"><span class="ref">Situations I<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span></span>) que <span class="STDitalic"><span class="ref">L’Étranger<span class="refinfo">œuvre, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span></span><span class="quote" onclick="displayExtract('toDefine','0','0',1);">«&nbsp;refuse l’anthropomorphisme&nbsp;»</span>, il nous donne, comme le montrent les citations précédentes, une vue incomplète de
                l’ouvrage. <span class="ref">Sartre<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> a sans doute remarqué ces passages, mais il pense que <span class="ref">Camus<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span>, <span class="quote" onclick="displayExtract('toDefine','3','1',1);">«&nbsp;infidèle à son principe, fait de la poésie&nbsp;»</span>. Ne peut-on pas dire, plutôt, que ces métaphores sont justement l’explication du
                livre&nbsp;? <span class="ref">Camus<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi0">blâme</span>.</span></span> ne refuse pas l’anthropomorphisme, il s’en sert avec économie et subtilité, pour
                lui donner plus de poids.</p>
