--- a/04_livrable/website/punr/punr_ch05.html
+++ b/04_livrable/website/punr/punr_ch05.html
@@ -61,18 +61,19 @@
                   de seuil. Aux récriminations contre une littérature périmées, aux recommendations
                   techniques succèdent les cas pratiques&nbsp;: nous sommes invités à lire la modernité à
                   travers les lectures de Robbe-Grillet.</p>
-               <p>À la filiation prestigieuse (car constituée de classique relativement éloignés) se
-                  surimpose une filiation à la fois plus contemporaine et moins connus du grand public.</p>
+               <p>À la filiation prestigieuse (car constituée de classique relativement éloignés de
+                  son époque) se surimpose une filiation à la fois plus contemporaine, esquissant une
+                  voie pour la littérature. Si l'on ne pourrait affirmer avec certitude que Robbe-grillet
+                  défend l'idée d'un progrès en art, on observe du moins une gradation dans l'ordre
+                  de ces chroniques&nbsp;: plutôt que d'être insérées dans leur ordre de publication ces
+                  critiques sont organisés de la plus éloignée à la plus proche de la modernité.</p>
                <p>À travers ces critiques, Robbe-Grillet défend deux pendants de la modernité : des
-                  techniques et une certaine attitude qu'il préconise à l'endroit des œuvres littéraire.
-                  Que devrait-on lire ? Comment devrait-on lire ?</p>
-               <p>Si l'on ne pourrait affirmer avec certitude que Robbe-grillet défend l'idée d'un progrès
-                  en art, on observe du moins une gradation dans l'ordre de ces chroniques&nbsp;: plutôt
-                  que d'être insérées dans leur ordre de publication ces critiques sont organisés de
-                  la plus éloignée à la plus proche de la modernité.</p>
+                  techniques ld'écriture, mais aussi une certaine attitude qu'il préconise à l'endroit
+                  des œuvres littéraire. Que devrait-on lire&nbsp;? Comment devrait-on lire&nbsp;? À ces questions
+                  ce court texte propose un début de réponse.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2250"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
+            <h3 id="d1e2249"><span id="page_84" class="STDgray STDsmall pb">[84]</span>Éléments d’une anthologie moderne</h3>
             <p class="first">Les quelques œuvres qui vont être rapidement analysées, ou commentées, dans les pages
                qui suivent sont loin d’être les seules à avoir marqué de leurs recherches la littérature
                de cette première moitié du <span class="STDsc">xx</span><span class="STDexposant">e</span> siècle. Ce ne sont même pas toujours celles qui m’auront personnellement le plus
