--- a/04_livrable/website/punr/punr_ch06.html
+++ b/04_livrable/website/punr/punr_ch06.html
@@ -57,17 +57,16 @@
          <article>
             <details>
                <summary>Introduction</summary>
-               <p>Publiée en décembre 1963 dans la revue Critique, cette analyse du style de Raymond
-                  Roussel semble partir du constat que Raymond Roussel écrit «&nbsp;mal&nbsp;» c'est-à-dire qu'il
-                  ne répond pas aux habitudes de la réception. En effet, il ne s'agit pas d'une littérature
-                  du secret, ni même du dévoilement mais une littérature d'un imaginaire loufoque décrit
-                  avec la banalité de ce qui n'est que pour être. En cela ce cas pratique est à la fois
-                  une démonstration de la modernité selon Robbe-Grillet mais également de l'incapacité
-                  du discours de la critique contemporaine à rendre compte du fait littéraire, même
-                  relativement ancien.</p>
+               <p>Publiée en décembre 1963 dans la revue <span class="STDitalic">Critique</span>, cette analyse du style de Raymond Roussel semble partir du constat que Raymond Roussel
+                  écrit «&nbsp;mal&nbsp;» c'est-à-dire qu'il ne répond pas aux habitudes de la réception. En effet,
+                  il ne s'agit pas d'une littérature du secret, ni même du dévoilement mais une littérature
+                  d'un imaginaire loufoque décrit avec la banalité de ce qui n'est que pour être. En
+                  cela ce cas pratique est à la fois une démonstration de la modernité selon Robbe-Grillet
+                  mais également de l'incapacité du discours de la critique contemporaine à rendre compte
+                  du fait littéraire, même relativement ancien.</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e2280">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
+            <h3 id="d1e2279">Énigmes et transparence chez Raymond&nbsp;Roussel <br><span class="STDsmall">(1963)</span></h3>
             <p class="first"><span class="ref">Raymond&nbsp;Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> décrit&nbsp;; et, au-delà de ce qu’il décrit, il n’y a rien, rien de ce qui peut traditionnellement
                s’appeler un message. Pour reprendre une des expressions favorites de la critique
                littéraire académique, <span class="ref">Roussel<span class="refinfo">auteur, <span class="Ref1">mention</span>, <span class="Axi2">éloge</span>.</span></span> ne semble guère avoir <span class="quote" onclick="displayExtract('toDefine','mAxiologicStatus','9',1);">«&nbsp;quelque chose à dire&nbsp;»</span>. Aucune transcendance, aucun dépassement humaniste, ne peuvent s’appliquer aux séries
