--- a/04_livrable/website/punr/punr_ch10.html
+++ b/04_livrable/website/punr/punr_ch10.html
@@ -57,29 +57,25 @@
          <article>
             <details>
                <summary>Introduction</summary>
-               <p>Dans cet article, initialement paru dansXXXX enXXX, Robbe-Grillet fait la critique
-                  de deux romans de Robert Pinget (auteur rattaché au NR XXXRICARDOU?XXX) Mahu ou le
-                  matériau et Le Renard et la boussole paru en 1952 et 1953 respectivement. Robbe-Grillet
-                  s'y emploie à résumer l'intrigue autant que faire ce peut (le terme même d'«&nbsp;intrigue&nbsp;»
-                  semble ici inaproprié). Ce résumé vaut commentaire tant l'explicitation des détours
-                  de ces œuvres ne peut être que le récit d'une écriture.</p>
+               <p>Dans cet article, initialement paru dans <span class="STDitalic">Critique</span> en janvier&nbsp;1954, Robbe-Grillet fait la critique de deux romans de Robert Pinget (auteur
+                  rattaché au nouveau roamn) <span class="STDitalic">Mahu ou le matériau</span> et <span class="STDitalic">Le Renard et la boussole</span> paru en 1952 et 1953. Robbe-Grillet s'y emploie à résumer l'intrigue autant que faire
+                  ce peut (le terme même d'«&nbsp;intrigue&nbsp;» semble ici inaproprié). Ce résumé vaut commentaire
+                  tant l'explicitation des détours de ces œuvres ne peut être que le récit d'une écriture.</p>
                <p>Si, comme l'ensemble des critiques au sein de Pour un nouveau roman, le texte semble
                   une digression dans l'économie de la démonstration, cette digression elle-même puisqu'elle
                   est assemblée au recueil vaut d'emblée aux yeux du lecteur illustration des thèses.</p>
-               <p>Que nous démontre la lecture de Pinget que nous livre Robbe-Grillet ? Robbe-Grillet
+               <p>Que nous démontre la lecture de Pinget que nous livre Robbe-Grillet&nbsp;? Robbe-Grillet
                   ne tire aucune conclusion dans cet article, cependant la relative inanité de l'exercice
                   auquel il se livre ici, dénouer le fil de l'aventure, semble la meilleure incarnation
-                  possible des thèses exposées dans « De quelques notions périmées » : son analyse du
-                  personnage de Renard, le récit insaisiçable se veulent les preuves que le discours
-                  habituel de la critique n'a pas prise sur les œuvres du nouveau roman (et peut-être
-                  Robbe-Grillet non plus). Enfin il convient de souligner que l'article souvre sur l'assertion
-                  initiale déplorant le fait que les œuvres de Pinget passe inaperçu. Outre le fait
-                  que cette affirmation semble corroborer les propos que Robbe-Grillet tient également
-                  dans «XXX», il n'est sans doute pas anodin que l'éditeur Robbe-Grillet publie à propos
-                  de Pinget publié chez Minuit.</p>
+                  possible des thèses exposées dans «&nbsp;De quelques notions périmées&nbsp;» : son analyse du
+                  personnage de Renard, le récit insaisissable se veulent les preuves que le discours
+                  habituel de la critique n'a pas prise sur les œuvres du nouveau roman. Enfin il convient
+                  de souligner que l'article souvre sur l'assertion initiale déplorant le fait que les
+                  œuvres de Pinget passe inaperçu. Outre le fait que cette affirmation semble corroborer
+                  les propos que Robbe-Grillet tient également dans «&nbsp;Une voie pour le roman futur&nbsp;».</p>
             </details>
             <div class="smallgap"></div>
-            <h3 id="d1e3739">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
+            <h3 id="d1e3738">Un roman qui s’invente lui-même<br><span class="STDsmall">(1954)</span></h3>
             <p class="first"><span class="quote" onclick="displayExtract('pr_02_92','2','0',1);">«&nbsp;J’y pense, j’y pense, un livre quelle prétention dans un sens, mais quelle extraordinaire
                   merveille s’il est raté dans les grandes largeurs.&nbsp;»</span> Ainsi <span class="ref">Robert&nbsp;Pinget<span class="refinfo">auteur, <span class="Ref9"></span>, <span class="Axi"></span>.</span></span> nous prévient de ses ambitions et cet écrivain honnête (l’espèce n’est pas si répandue),
                qui met tout son soin, depuis déjà quelques années, à <span class="STDitalic">rater</span> ses livres dans les grandes largeurs, est en train de passer à peu près inaperçu&nbsp;–&nbsp;même
